--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ a:focus {
 }
 
 .header_section .header_top .contact_nav a i {
-  color: #ff8a1d;
+  color: #8dba3f;
 }
 
 .header_section .header_bottom {
@@ -261,7 +261,7 @@ a:focus {
 }
 
 .quote_btn-container a:hover {
-  color: #ff8a1d;
+  color: #8dba3f;
 }
 
 /*end header section*/
@@ -311,8 +311,8 @@ a:focus {
   font-family: 'Merriweather Sans', sans-serif;
   text-transform: uppercase;
   padding: 10px 45px;
-  background-color: #ff8a1d;
-  border: 1px solid #ff8a1d;
+  background-color: #8dba3f;
+  border: 1px solid #8dba3f;
   border-radius: 5px;
   color: #ffffff;
   margin-top: 15px;
@@ -320,7 +320,7 @@ a:focus {
 
 .slider_section .detail-box a:hover {
   background-color: transparent;
-  color: #ff8a1d;
+  color: #8dba3f;
 }
 
 .slider_section .img-box img {
@@ -389,7 +389,7 @@ a:focus {
 }
 
 .feature_section .feature_container .box:hover, .feature_section .feature_container .box.active {
-  background-color: #ff8a1d;
+  background-color: #8dba3f;
   color: #ffffff;
 }
 
@@ -467,15 +467,15 @@ a:focus {
   font-family: 'Merriweather Sans', sans-serif;
   text-transform: uppercase;
   padding: 10px 45px;
-  background-color: #ff8a1d;
-  border: 1px solid #ff8a1d;
+  background-color: #8dba3f;
+  border: 1px solid #8dba3f;
   border-radius: 2px;
   color: #ffffff;
 }
 
 .professional_section .detail-box a:hover {
   background-color: transparent;
-  color: #ff8a1d;
+  color: #8dba3f;
 }
 
 .service_section {
@@ -536,7 +536,7 @@ a:focus {
 }
 
 .service_section .box:hover {
-  background-color: #ff8a1d;
+  background-color: #8dba3f;
   color: #ffffff;
 }
 
@@ -754,7 +754,7 @@ a:focus {
 }
 
 .info_section a:hover {
-  color: #ff8a1d;
+  color: #8dba3f;
 }
 
 .info_items a {
@@ -800,7 +800,7 @@ a:focus {
 }
 
 .info_items .item:hover .img-box {
-  background-color: #ff8a1d;
+  background-color: #8dba3f;
 }
 
 .info_items {
